--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>resume</title>
     </head>
-    <body>
+    <body style="background-color:antiquewhite;">
         <h1>KUSHAGRA BAJPAI</h1>
         <img src="./2ccee9af-e951-44ff-a929-80ff4423c4aa (1).jpg" height="250" width="250"/>
         <h2>Summary</h2>
